[gd_scene load_steps=4 format=3 uid="uid://boauivelqg6pe"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_d43cv"]
[ext_resource type="Texture2D" uid="uid://b7lr1kpppumb4" path="res://assets/mm_background.png" id="2_k6q82"]
[ext_resource type="AudioStream" uid="uid://bcmgmf53ptbps" path="res://assets/sounds/mainMenu-calmMusic.mp3" id="3_l8klr"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_d43cv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(577, 327)
texture = ExtResource("2_k6q82")
region_enabled = true
region_rect = Rect2(-689, -408, 3028.81, 1533.44)

[node name="GameOverText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -45.5
offset_right = 46.0
offset_bottom = -22.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"

[node name="Score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.5
offset_right = 24.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Score:"

[node name="TryAgain" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 52.0
offset_right = 46.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
text = "TRY AGAIN
"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 109.0
offset_right = 21.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_l8klr")
parameters/looping = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
